--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@
 PORT=3000
 
 #COLOQUE AS CONFIGURAÇÕES DO SEU BANCO DE DADOS, PODE SER LOCAL OU DO PROF WAGNER
-MYSQL_HOST=127.0.0.1
-MYSQL_DB=node_desktop
-MYSQL_USER=root
-MYSQL_PASSWORD=
+MYSQL_HOST=wagnerweinert.com.br
+MYSQL_DB=kayure
+MYSQL_USER=kayure
+MYSQL_PASSWORD=kayure
 MYSQL_PORT=3306
