--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 PORT=3000
 
 #COLOQUE AS CONFIGURAÇÕES DO SEU BANCO DE DADOS, PODE SER LOCAL OU DO PROF WAGNER
-MYSQL_HOST=wagnerweinert.com.br
+MYSQL_HOST=COLOQUE SEU BANCO AQUI
 MYSQL_DB=kayure
 MYSQL_USER=kayure
 MYSQL_PASSWORD=kayure
