--- a/package.json
+++ b/package.json
@@ -12,21 +12,23 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.18.2",
+    "express": "^4.21.1",
+    "express-rate-limit": "^7.4.1",
     "fibonacci": "^1.6.11",
     "mysql2": "^3.4.0",
-    "nodemon": "^3.0.1",
+    "nodemon": "^3.1.7",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.5",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2",
-    "validator": "^13.6.0"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2",
+    "validator": "^13.6.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.17",
-    "@types/node": "^16.18.46",
+    "@types/express": "^4.17.21",
+    "@types/node": "^16.18.119",
     "@types/sequelize": "^4.28.10",
     "@types/validator": "^13.6.3"
   }
